[gd_scene load_steps=11 format=3 uid="uid://djw5xuey8t6ej"]

[ext_resource type="Script" path="res://Scripts/unit.gd" id="1_4v2kk"]
[ext_resource type="PackedScene" uid="uid://crystjliaap0v" path="res://Scenes/movement_marker.tscn" id="2_5vcyy"]
[ext_resource type="SpriteFrames" uid="uid://6loxl1cn7p1p" path="res://assets/Factions/Knights/Troops/Warrior/Blue/Blue_WarriorSpriteFrames.tres" id="2_xa5uh"]
[ext_resource type="SpriteFrames" uid="uid://bt1qa6m1ihxqo" path="res://assets/Factions/Knights/Troops/Warrior/Purple/Purple_WarriorSpriteFrames.tres" id="3_4lhnb"]
[ext_resource type="Script" path="res://Scripts/TeamComponent.gd" id="4_coeou"]
[ext_resource type="Script" path="res://Scripts/UnitAnimationController.gd" id="5_n0l2l"]
[ext_resource type="Script" path="res://Scripts/MovementComponent.gd" id="7_i0lda"]
[ext_resource type="Texture2D" uid="uid://cxtrpayffjjgi" path="res://assets/UI/crosshair142.png" id="8_olrri"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v51dl"]
radius = 32.0156

[sub_resource type="CircleShape2D" id="CircleShape2D_ydkv4"]
radius = 13.0

[node name="Unit" type="StaticBody2D"]
scale = Vector2(0.5, 0.5)
collision_mask = 3
script = ExtResource("1_4v2kk")
movement_marker_scene = ExtResource("2_5vcyy")
sprite_frames = Array[SpriteFrames]([ExtResource("2_xa5uh"), ExtResource("3_4lhnb")])

[node name="UnitAnimationController" type="AnimatedSprite2D" parent="."]
z_index = 5
y_sort_enabled = true
position = Vector2(0, -26)
sprite_frames = ExtResource("3_4lhnb")
animation = &"Idle"
autoplay = "Idle"
script = ExtResource("5_n0l2l")

[node name="TeamComponent" type="Node" parent="."]
script = ExtResource("4_coeou")
team = 1

[node name="MovementComponent" type="Node2D" parent="."]
script = ExtResource("7_i0lda")
speed = 100

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="MovementComponent"]
target_desired_distance = 20.0
radius = 146.5
time_horizon_agents = 0.53

[node name="BoidCollisionArea" type="Area2D" parent="MovementComponent"]
collision_layer = 8388608
collision_mask = 8388608

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovementComponent/BoidCollisionArea"]
position = Vector2(0, -13)
shape = SubResource("CircleShape2D_v51dl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_ydkv4")

[node name="SelectedSprite" type="Sprite2D" parent="."]
modulate = Color(6.69017e-06, 0.872664, 7.70092e-07, 1)
show_behind_parent = true
y_sort_enabled = true
position = Vector2(0, 16)
texture = ExtResource("8_olrri")

[connection signal="path_created" from="MovementComponent" to="." method="on_handle_path_created"]
[connection signal="position_reached" from="MovementComponent" to="." method="on_handle_position_reached"]
[connection signal="velocity_updated" from="MovementComponent" to="." method="on_handle_velocity_updated"]
